5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1723_2499.log
== SUBMITION (2019-05-14 11:41:23) 
-- CODE:
from math import*
k = int(input("digite o numero natural: "))
soma = 0
i = 0
fim = k-1
while (i<=fim):
	soma = soma + (1/factorial(i))
	i = i+1
print(t)
-- EXECUTION TIME:
0.144282
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2499/main.py", line 9, in <module>
    print(t)
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:41:52) 
-- CODE:
from math import*
k = int(input("digite o numero natural: "))
soma = 0
i = 0
fim = k-1
while (i<=fim):
	soma = soma + (1/factorial(i))
	i = i+1
print(round(soma, 8))
-- EXECUTION TIME:
0.116975
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:37:37) 
-- CODE:
from math import*

k = int(input("digite o numero natural: "))
soma = 0
i = 0
fim = k-1

while (i<=fim):
	soma = soma + (1/factorial(i))
	i = i+1
print(round(soma, 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:38:42) 
-- CODE:
from math import*

a = int(input("digite o numero natural: "))

soma = 0
i = 0
fim = a-1

while (i<=fim):
	soma = soma + (1/factorial(i))
	i = i+1
print(round(soma, 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:52:41) 
-- CODE:
from math import*

n= int(input("digite o numero natural: "))

soma = 0
i = 0
fim = n-1

while (i<=fim):
	soma = soma + (1/factorial(i))
	i = i+1
print(round(soma, 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:54:23) 
-- CODE:
from math import*

n= int(input("digite o numero natural: "))

soma = 0
i = 0
fim = n-1

while (i<=fim):
	soma = soma + (1/factorial(i))
	i = i+1
print(round(soma, 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:54:26) 
-- CODE:
from math import*

n= int(input("digite o numero natural: "))

soma = 0
i = 0
fim = n-1

while (i<=fim):
	soma = soma + (1/factorial(i))
	i = i+1
print(round(soma, 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:55:35) 
-- CODE:
from math import*

n= int(input("digite o numero natural: "))

soma = 0
i = 0
fim = n-1

while (i<=fim):
	soma = soma + (factorial(i))
	i = i+1
print(round(soma, 8))
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:55:42) 
-- CODE:
from math import*

n= int(input("digite o numero natural: "))

soma = 0
i = 0
fim = n-1

while (i<=fim):
	soma = soma + (factorial(i))
	i = i+1
print(round(soma, 8))
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:57:19) 
-- CODE:
from math import*

n= int(input("digite o numero natural: "))

soma = 0
i = 0
fim = n-1

while (i<=fim):
	soma = soma + (1/factorial(i))
	i = i+1
print(round(soma, 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
